# PoE2TabletTools

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  poe2_tablet_market_intelligence_project_doc.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml  infrastructure.yml
poe_tablet_tool/: __init__.py  analytics.py  api.py  buy_signal_engine.py  config.py  differ.py  health.py  league_detector.py  league_reset.py  magic_analyzer.py  modifiers_data.py  parser.py  query_builder.py  rare_analyzer.py  rate_limiter.py  rate_provider.py  regex_builder.py  report_builder.py  scheduler.py  scraper.py  snapshot_store.py  tablets.py
poe_tablet_tool/db/: __init__.py  connection.py  migrations.py  schema.py
static/: compare_tablets.html  dashboard.html  favorites.html  index.html  modifiers.html  normal_prices.html  tablet_detail.html
static/css/: shared.css  tailwind-extensions.css  theme.css
static/js/: config.js  shared.js
tests/: conftest.py  test_api_smoke.py  test_buy_signal_engine.py  test_differ.py  test_parser.py  test_report_builder.py  test_snapshot_store.py
